Vitis_HLS/MeanShiftFilter/MeanShiftFilter/solution1/csim/build/apcc.log
INFO: [HLS 200-10] Running '/tools/Xilinx/Vitis_HLS/2023.1/bin/unwrapped/lnx64.o/apcc'
INFO: [HLS 200-10] For user 'dell3561-49' on host 'dell3561-49' (Linux_x86_64 version 6.8.0-60-generic) on Wed Jul 02 17:36:36 CEST 2025
INFO: [HLS 200-10] On os Ubuntu 22.04.5 LTS
INFO: [HLS 200-10] In directory '/home/dell3561-49/Vitis_HLS_folder/MeanShiftFilter/MeanShiftFilter/solution1/csim/build'
In file included from ../../../../MeanShifFilter_tb.c:4:
In file included from ../../../../MeanShiftFilter.h:1:
In file included from /tools/Xilinx/Vitis_HLS/2023.1/common/technology/autopilot/ap_fixed.h:9:
In file included from /tools/Xilinx/Vitis_HLS/2023.1/common/technology/autopilot/etc/ap_common.h:41:
/tools/Xilinx/Vitis_HLS/2023.1/common/technology/autopilot/etc/ap_decl.h:47:2: error: "AP data type can only be used in C++"
#error "AP data type can only be used in C++"
 ^
/tools/Xilinx/Vitis_HLS/2023.1/common/technology/autopilot/etc/ap_decl.h:133:1: error: unknown type name 'template'
template <int _AP_W, bool _AP_S>
^
/tools/Xilinx/Vitis_HLS/2023.1/common/technology/autopilot/etc/ap_decl.h:133:10: error: expected identifier or '('
template <int _AP_W, bool _AP_S>
         ^
/tools/Xilinx/Vitis_HLS/2023.1/common/technology/autopilot/etc/ap_decl.h:136:1: error: unknown type name 'template'
template <int _AP_W>
^
/tools/Xilinx/Vitis_HLS/2023.1/common/technology/autopilot/etc/ap_decl.h:136:10: error: expected identifier or '('
template <int _AP_W>
         ^
/tools/Xilinx/Vitis_HLS/2023.1/common/technology/autopilot/etc/ap_decl.h:139:1: error: unknown type name 'template'
template <int _AP_W>
^
/tools/Xilinx/Vitis_HLS/2023.1/common/technology/autopilot/etc/ap_decl.h:139:10: error: expected identifier or '('
template <int _AP_W>
         ^
/tools/Xilinx/Vitis_HLS/2023.1/common/technology/autopilot/etc/ap_decl.h:142:1: error: unknown type name 'template'
template <int _AP_W, bool _AP_S>
^
/tools/Xilinx/Vitis_HLS/2023.1/common/technology/autopilot/etc/ap_decl.h:142:10: error: expected identifier or '('
template <int _AP_W, bool _AP_S>
         ^
/tools/Xilinx/Vitis_HLS/2023.1/common/technology/autopilot/etc/ap_decl.h:145:1: error: unknown type name 'template'
template <int _AP_W, bool _AP_S>
^
/tools/Xilinx/Vitis_HLS/2023.1/common/technology/autopilot/etc/ap_decl.h:145:10: error: expected identifier or '('
template <int _AP_W, bool _AP_S>
         ^
/tools/Xilinx/Vitis_HLS/2023.1/common/technology/autopilot/etc/ap_decl.h:148:1: error: unknown type name 'template'
template <int _AP_W1, typename _AP_T1, int _AP_W2, typename _AP_T2>
^
/tools/Xilinx/Vitis_HLS/2023.1/common/technology/autopilot/etc/ap_decl.h:148:10: error: expected identifier or '('
template <int _AP_W1, typename _AP_T1, int _AP_W2, typename _AP_T2>
         ^
/tools/Xilinx/Vitis_HLS/2023.1/common/technology/autopilot/etc/ap_decl.h:151:1: error: unknown type name 'template'
template <int _AP_W, int _AP_I, bool _AP_S = true, ap_q_mode _AP_Q = AP_TRN,
^
/tools/Xilinx/Vitis_HLS/2023.1/common/technology/autopilot/etc/ap_decl.h:151:10: error: expected identifier or '('
template <int _AP_W, int _AP_I, bool _AP_S = true, ap_q_mode _AP_Q = AP_TRN,
         ^
/tools/Xilinx/Vitis_HLS/2023.1/common/technology/autopilot/etc/ap_decl.h:155:1: error: unknown type name 'template'
template <int _AP_W, int _AP_I, ap_q_mode _AP_Q = AP_TRN,
^
/tools/Xilinx/Vitis_HLS/2023.1/common/technology/autopilot/etc/ap_decl.h:155:10: error: expected identifier or '('
template <int _AP_W, int _AP_I, ap_q_mode _AP_Q = AP_TRN,
         ^
/tools/Xilinx/Vitis_HLS/2023.1/common/technology/autopilot/etc/ap_decl.h:159:1: error: unknown type name 'template'
template <int _AP_W, int _AP_I, ap_q_mode _AP_Q = AP_TRN,
^
/tools/Xilinx/Vitis_HLS/2023.1/common/technology/autopilot/etc/ap_decl.h:159:10: error: expected identifier or '('
template <int _AP_W, int _AP_I, ap_q_mode _AP_Q = AP_TRN,
         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
ERROR: [APCC 202-10] clang compile failed: child process exited abnormally
ERROR: [APCC 202-1] ProcessSources failed
INFO: [APCC 202-3] Tmp directory is /tmp/apcc_db_dell3561-49/125431751470596771160
ERROR: [APCC 202-1] APCC failed.
INFO: [HLS 200-112] Total CPU user time: 0.72 seconds. Total CPU system time: 0.1 seconds. Total elapsed time: 0.68 seconds; peak allocated memory: 98.992 MB.
